--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -374,6 +374,8 @@ EVO-tech GmbH
 
 \include{Digitale_Speisekarte}
 
+\include{Positionierung}
+
 \include{Elektronik}
 
 \include{Sensoren_Aktoren}
