--- a/Sensoren_Aktoren.tex
+++ b/Sensoren_Aktoren.tex
@@ -26,6 +26,7 @@ Mit diesem ist es möglich sogenannte Colorcodes oder einfache Objekte zu erkenn
 
 \needspace{2cm}
   \subsection{Technische Planung}
+  % in Positionierung.tex ANFANG
     \subsubsection{Mögliche Verfahren zur Positionserkennung}
     Hier muss grundsätzlich zwischen zwei Messmethoden unterschieden werden:
     \begin{itemize}
@@ -49,6 +50,8 @@ Mit diesem ist es möglich sogenannte Colorcodes oder einfache Objekte zu erkenn
       Die zweite Alternative ist, dass eine bestimmte Route bekannt ist und sich das zu positionierende Objekt nur in einem bestimmten Bereich um diese Route bewegt.
       Wird bei der Positionierung der Route bereits auf Hindernisse geachtet müssen diese im Anschluss nicht mehr zwingend beachtet werden.
     \end{itemize}
+
+  % in Positionierung.tex ENDE
 
   \subsection{Umsetzung}
   Durch die PIXY CMUcam5 lässt sich eine relative Positionsmessung vergleichsweise einfach verwirklichen.
