--- a/diplom.bib
+++ b/diplom.bib
@@ -357,6 +357,14 @@
 	url = {http://www.mi.fu-berlin.de/inf/groups/ag-tech/teaching/2009-10_WS/S_19510b_Proseminar_Technische_Informatik/schmidt10positionsbestimmung.pdf},
 	title = {Positionsbestimmung in Gebäuden},
 }
+
+%chrisy
+@online{tech_def,
+	lastchecked = {2016-03-13},
+	url = {https://de.wikipedia.org/wiki/Technischer_Defekt},
+	title = {Technischer Defekt},
+}
+
 %chrisy
 @online{pos_eigenschaften,
 	lastchecked = {2016-03-03},
@@ -543,3 +551,4 @@
 	url = {http://www.uniturm.de/download/getdownloadfile?id=40022&type=dl},
 	title = {Spannungsverteilung bei verschiedenen Kerbformen},
 }
+
