--- a/Mechanik.tex
+++ b/Mechanik.tex
@@ -7,13 +7,14 @@
 
 		\subsubsection{Allgemeine Informationen über 3D Drucken}
 
-		Die Technologie des 3D Druckens hat in den letzten Jahren immer mehr an Popularität gewonnen. Mit Hilfe des 3D Druckers kann man fast alle vorstellbaren Formen anfertigen.
+		Die Technologie des 3D Druckens hat in den letzten Jahren immer mehr an Popularität gewonnen.
+		Mit Hilfe des 3D Druckers kann man fast alle vorstellbaren Formen anfertigen.
 		Es gibt verschiedenste Verfahren wie man ein Werkstück anfertigen kann: Laser Sintern, Stereolithographie, Drucken mit flüssigen Materialien, etc.
 		In diesem Projekt wird nur die Variante des Druckens mit flüssigen Material verwendet.
 		Diese ist kostengünstig \bzw genau genug für die Teile. Wie der Name schon sagt, wird Material in einem Druckkopf geschmolzen und dann Schicht für Schicht auf der Druckplatte aufgetragen.
 		Der Druckkopf fährt nur in X und Y Richtung, die Höhe wird mit der Druckplatte selbst verfahren.
 
-		Meist werden Drucker über einen Maschinencode gesteuert, dem sogenannten „G-Code“. In diesem Code werden die Punkte (Koordinaten) definiert, die der Extruder (Druckkopf) abfahren muss.
+		Meist werden Drucker über einen Maschinencode gesteuert, den sogenannten „G-Code“. In diesem Code werden die Punkte (Koordinaten) definiert, die der Extruder (Druckkopf) abfahren muss.
 		Die folgende Abbildung zeigt ein Beispiel eines Maschinencodes.
 
 			\begin{figure}[tbh]
@@ -37,19 +38,22 @@
 	  	\label{tab:befehle gcode}%
 			\end{table}%
 
-		Je nachdem wie der Drucker aufgebaut ist, werden die Produkte genau oder nur grob angefertigt. Sehr genaue Teile kann man am besten in einem Drucker produzieren, der einen geschlossenen Druckraum \bzw eine beheizte Druckplatte hat.
-		Besonders an dünnen Platten merkt man das. Wenn der Druckraum nach \bzw während des Druckvorgangs warm ist, kühlt das Werkstück an jeder Stelle fast gleich ab.
-		Ist der Druckraum offen, kühlt das Werkstück in der Mitte schneller ab, kühles Material zieht sich zusammen, daher biegt sich das Material auf.
+		Je nachdem wie der Drucker aufgebaut ist, werden die Produkte genau oder nur grob angefertigt.
+		Sehr genaue Teile kann man am besten in einem Drucker produzieren, der einen geschlossenen Druckraum \bzw eine beheizte Druckplatte hat.
+		Besonders an dünnen Platten merkt man das.
+		Wenn der Druckraum nach \bzw während des Druckvorgangs warm ist, kühlt das Werkstück an jeder Stelle fast gleich ab.
+		Ist der Druckraum offen, kühlt das Werkstück in der Mitte schneller ab, kühles Material zieht sich zusammen, daher biegt sich das Material am Rand auf.
 
-		Es kann vorkommen, dass ein Teil nur so gedruckt werden kann, wenn es nicht komplett auf der Druckplatte aufliegt zum Beispiel ein Steg, der „in der Luft“ liegt oder eine Bohrung im Werkstück, die horizontal gedruckt werden muss.
+		Manchmal ist es unumgeänglich, ein Teil so drucken zu lassen, dass es nicht komplett auf der Druckplatte aufliegt zum Beispiel ein Steg,
+		der „in der Luft“ liegt oder eine Bohrung im Werkstück, die horizontal gedruckt werden muss.
 		In solchen Fällen, druckt der Drucker unter diesem Steg Stützmaterial. Basierend auf diesem Stützmaterial, wird dann die gewünschte Form gedruckt.
-		Das Stützmaterial ist so gefertigt, dass man es leicht von dieser abbrechen kann, ohne dass Rückstände zurück bleiben.
+		Das Stützmaterial ist so strukturiert, dass man es leicht entfernen kann, ohne Rückstände zu hinterlassen.
 
 		\subsubsection{Von der Idee zur Anfertigung}
 
 		Die größte Hürde an der Realisierung einer Idee ist, eine CAD Zeichnung zu erstellen. In 3D CAD Programmen wie Creo, SolidWorks, etc. kann man ein Teil konstruieren und dann als STL (Standard Triangulation Language) File abspeichern.
-		Dieses Format gibt dann nur mehr Informationen über die Oberfläche und Struktur an (siehe Abbildung \ref{stl_file_optionen}).
-		Die Sehnenhöhe gibt an wie genau die Oberfläche gedruckt werden muss, die Winkelsteuerung gibt die Genauigkeit der Radien und Kanten des Teiles an.
+		Dieses Format gibt dann nur mehr Informationen über die Oberfläche und Struktur an.
+		Die Sehnenhöhe gibt an wie genau die Oberfläche gedruckt werden muss, die Winkelsteuerung gibt die Genauigkeit der Radien und Kanten des Teiles an (siehe Abbildung \ref{stl_file_optionen}).
 
 
 			\begin{figure}[tbh]
@@ -74,11 +78,11 @@
 		\subsection{Technische Planung}
 
 		Die Diplomarbeit hat sich speziell auf den Transport von Cupcakes spezialisiert, um diesen sicher transportieren zu können, ist es notwendig eine Halterung zu konzipieren.
-		Zu beachten ist, dass die Halterung möglichst wenig wiegt \bzw leicht zu montieren ist.
+		Zu beachten ist, dass die Halterung möglichst wenig wiegen \bzw leicht zu montieren sein soll.
 
 		Der Akku wurde an der Unterseite des Hexacopters befestigt, daher war es nur mehr möglich die Halterung an der oberen Centerplate zu platzieren.
 		Damit der Multicopter möglichst ausgewogen ist, muss sich das zu transportierende Objekt in der Mitte befinden.
-		Die Idee war es daher, den Cupcake mit einer Halterung zu umranden, um ihn gegen Verrutsche zu sichern. Die Geometrie der Platte \bzw die Größe des Objektes hat die Befestigungsmöglichkeiten etwas eingeschränkt (siehe Abbildung \ref{platte_cupcake}).
+		Die Idee war es daher, den Cupcake mit einer Halterung zu umranden, um ihn gegen Verrutschen zu sichern. Die Geometrie der Platte \bzw die Größe des Objektes hat die Befestigungsmöglichkeiten etwas eingeschränkt (siehe Abbildung \ref{platte_cupcake}).
 		Die innere Reihe der Langlöcher würde sich optimal anbieten, um die Halterung befestigen zu können, die Cupcakeform kann so direkt von einer Haltevorrichtung gestützt werden.
 
 
@@ -96,7 +100,7 @@
 	Die inneren Ausnehmungen der oberen Centerplate haben sich optimal angeboten, da diese direkt bis zur Form reichen.
 
 	Es wurden Stützen konstruiert, die in den Ausnehmungen fixiert werden können und sich direkt an das Dessert anpassen.
-	Die folgenden Abbildungen zeigen die konstruierten Halterungsstutzen und deren Befestigung.
+	Die folgenden Abbildungen zeigen die konstruierten Halterungsstützen und deren Befestigung.
 
 			\begin{figure}[H]
 			  \begin{centering}
@@ -115,12 +119,12 @@
 	Durch den Platzmangel mussten M4 Schrauben gewählt werden, da diese klein sind und trotzdem viel Beanspruchung aufnehmen können.
 	Die Schlüsselweite einer M4 Mutter beträgt 7.0 mm, die Breite der Ausnehmung 6.5 mm, würde man die Schrauben direkt mit der Platte verschrauben, müsste man eine Beilagscheibe zwischenlegen, um eine größere Aufliegefläche für die Mutter zu erhalten.
 
-	Es wurden spezielle Mutterhalter entworfen (siehe Abbildung \ref{halterung_cupcake_unten_grosz}), diese bezwecken zwei Funktionen:
+	Um dieses Problem zu umgehen, wurden spezielle Mutterhalter entworfen (siehe Abbildung \ref{halterung_cupcake_unten_grosz}), diese bezwecken zwei Funktionen:
 	Einerseits muss man die Muttern während man die Halterung montiert nicht mehr festhalten und andererseits kann man die Schraubenverbindung viel fester anziehen, da man die Platte nicht mehr beschädigen kann.
 
-	Der Platz für die Stutzen entlang der Langlöcher ist nur so kurz, dass sich die Köpfe der Schrauben und die Muttern schneiden würden.
+	Der Platz für die Stützen entlang der Langlöcher ist nur so kurz, dass sich die Köpfe der Schrauben und die Muttern schneiden würden.
 	Um dieses Problem zu beheben, wurden Höhenunterschiede zwischen den Schrauben eingeplant.
-	Das macht die Halterungsstutzen kompakter und verhindert Kollisionen.
+	Das macht die Halterungsstützen kompakter und verhindert Kollisionen.
 
 	\subsection{Herausforderungen und Lösungen}
 
@@ -148,7 +152,7 @@
 
 			\begin{figure}[tbh]
 			\begin{centering}
-			\includegraphics[width = 0.65\textwidth]{Bilder/halterung_cupcake_fertig_hinweis}
+			\includegraphics[width = 0.75\textwidth]{Bilder/halterung_cupcake_fertig_hinweis}
 			\par\end{centering}
 			\caption{Gedrucktes Halterungssystem}
 			\label{halterung_cupcake_fertig_hinweis}
@@ -160,7 +164,7 @@
 
 	\subsection{Technische Planung}
 
-	In dem gewählten Bausatz des Hexacopters ist kein Rotorschutz vorhanden.
+	In dem gewählten Bausatz des Multicopters ist kein Rotorschutz vorhanden.
 	Da der Hexacopter direkt zu den Gästen fliegen wird, ist es nicht umgänglich, den Kontakt mit den Propellern zu verhindern.
 	Diese können durch die hohen Drehzahlen und die Kraft der Motoren erhebliche Verletzungen zuführen.
 	Es gibt diverse Vorrichtungen für Multicopter zu kaufen, die nur die Rotorblätter schützen, jedoch keine, die auch das Eingreifen einer Hand verhindern.
@@ -189,17 +193,17 @@
 			\end{figure}
 
 	Wie geplant, umrandet der Ring das komplette Rotorblatt, im Falle eines Absturzes kann der Propeller nicht den Boden berühren und wird somit nicht beschädigt.
-	Auf der Oberseite und Unterseite ist ein Gitter vorgesehen, welches Verletzungen an Personen verhindert.
+	Auf der Ober,- und Unterseite ist ein Gitter vorgesehen, welches Verletzungen an Personen verhindert.
 	Das Gitter an der Oberseite ist etwas feiner gegliedert als an der Unterseite, da man den Cupcake von der oberen Centerplate entnehmen muss.
-	An der Unterseite ist das Gitter nur gestreift konstruiert, da die Luftströmung nicht stark beeinflusst werden darf und die größere Verletzungsgefahr an der Oberseite besteht.
+	An der unteren Hälfte des Ringes ist das Gitter nur gestreift konstruiert, da die Luftströmung nicht zu stark beeinflusst werden darf und die größere Verletzungsgefahr an der Oberseite besteht.
 
 	Der komplette Rotorschutz wird einerseits mit zwei Schrauben am Hexacopter befestigt (siehe Abbildung \ref{propellerschutz_gesamt_oben}) und andererseits von einer Stütze (siehe Abbildung  \ref{propellerschutz_gesamt_unten},
-	\textcolor{blue}{blauer Balken}) an der Unterseite gehalten. Die Stütze wird direkt an dem Motor angeschraubt, samt dem Arm des Hexacopters.
-	Da die Schrauben der Centerplate und des Motors zu kurz sind, werden passende Zylinderkopfschrauben verwendet.
+	\textcolor{blue}{blauer Balken}) an der Unterseite gehalten.
+	Die Stütze wird direkt an dem Motor angeschraubt, samt dem Arm des Hexacopters, da die Schrauben der Centerplate und des Motors zu kurz sind, werden passende Zylinderkopfschrauben verwendet.
 	Besonders bei dem Motor ist es wichtig, dass diese nicht zu lang sind, da sich der Motor nicht mehr bewegen könnte.
 
 	Durch die Gewichtsbegrenzung \bzw der Form des Propellerschutzes, bot es sich an, diesen in einem 3D Drucker anzufertigen.
-	Dazu wurde der Ring in zwei Hälften unterteilt, eine Ober,- und eine Unterseite.
+	Dazu wurde der Ring in zwei Hälften unterteilt, in eine Ober,- und Unterseite.
 	Der Ring hat einen ungefähren Innendurchmesser von 270 mm, das Druckbett eine maximale Abmessung von 270x210 mm.
 	Beide Hälften mussten noch in weitere, für den Drucker passende Teile unterteilt werden.
 	Die obere Hälfte wurde noch einmal in der Mitte geteilt, die Unterseite musste in vier Teile unterteilt werden (siehe folgende Abbildung \ref{propellerschutz_mitte_unterteilung}).
@@ -229,8 +233,8 @@
 
 	Eines der größten Probleme war es, den Rotorschutz so zu konstruieren, dass er stabil, aber auch sehr leicht ist.
 	Im Falle eines Absturzes, würden hohe Kräfte auf den Propellerschutz wirken, daher muss dieser sehr robust gefertigt sein.
-	Der Vorteil von ABS \bzw 3D Druckteilen ist, dass diese sehr elastisch sind, nicht wie Styropor zum Beispiel, es ist daher nicht notwendig den Ring dickwandig zu konstruieren.
- 	Durch diesen Vorteil kann man einiges an Gewicht einsparen, das Problem besteht aber trotzdem noch darin, dass der Ring enorme Dimensionen hat.
+	Der Vorteil von ABS \bzw 3D Druckteilen ist, dass diese sehr elastisch sind, es ist daher nicht notwendig die Wand des Ringes zu dick zu konstruieren.
+ 	Aufgrund dieser Eigenschaft kann man einiges an Gewicht einsparen, das Problem besteht aber trotzdem noch darin, dass der Ring enorme Dimensionen hat.
 	Eine komplette Zusammenstellung (Ring, Stütze und Schrauben) hat ein Gewicht von etwa 90 g.
 	Auf sechs Propeller aufgerechnet mehr als ein halbes Kilogramm, der Hexacopter kann das zwar noch tragen, jedoch schränkt das die hardwaremäßige Erweiterung stark ein.
 
@@ -242,7 +246,7 @@
 
 Die einzelnen Teile wurden wie schon erwähnt, miteinander verklebt. Bevor diese zusammengefügt wurden, musste sichergestellt werden, dass die Nuten exakt ineinander passen.
 Würde dies nicht gewährleistet sein, würden die obere und untere Hälfte des Propellerschutzes nicht mehr zusammenpassen.
-Die Toleranzen des Druckers, besonders bei solchen Stellen sind so groß, dass man meistens mit Feilen die Nuten nachbessern muss.
+Die Toleranzen des Druckers, besonders bei solchen Stellen sind so groß, dass meist die Nuten mit Feilen nachgebessert werden müssen.
 Besonders beim Verkleben der Teile ist viel Geduld nötig, da auch der Sekundenkleber nicht sofort komplett trocken ist,
 es war ebenso wichtig, den richtigen Untergrund zu wählen, eine Holzplatte eignete sich am besten, da keine Rückstände blieben.
 
@@ -275,14 +279,14 @@ Der gesamte Rotorschutz konnte dann mittels den vorgesehenen Schrauben an der Ce
 			\end{figure}
 
 	Das Gewicht spielte, analog zu den anderen Konstruktionen, eine wichtige Rolle.
-	Materialien wie Stahl oder Aluminium wären selbst bei diesem kleinen Teil (51x46x10 mm) zu schwer geworden.
+	Materialien wie Stahl oder Aluminium wären selbst bei diesen kleinen Teil (51x46x10 mm) zu schwer geworden.
 	Um das zu verhindern wurde diese Haltevorrichtung, wie auch der Propellerschutz, in einem 3D Drucker angefertigt.
 	Das Teil wiegt durch die Fertigungsmethode etwa 5.5 g, das entspricht etwa dem Gewicht einer 20 Cent Münze.
 
 	Die Halterung wird an der unteren Centerplate befestigt, da wie schon erwähnt, der Sensor von dem Boden aus misst.
 	Die Befestigungsmethode ist selbst entwickelt worden, dabei handelt es sich um ein spezielles Klammersystem, welches an einer Strebe der Platte montiert werden kann (siehe Abbildung \ref{halterung_ultraschall_fertig}).
 	Die Klammer besteht aus drei Stegen, auf denen jeweils ein Anschlag vorgesehen wurde.
-	Die Form der Anschläge ist  exakt an die Centerplate angepasst, damit sich die Halterung so geringfügig wie möglich bewegen lässt.
+	Die Form der Anschläge ist  exakt an die Centerplate angepasst, damit sich die Halterung nur so geringfügig wie möglich bewegen lässt.
 
 	Die ideale Stärke der Stege wurde durch Versuche ermittelt, es wurde dabei das Klammersystem mit unterschiedlichen Dicken gefertigt und an dem Hexacopter getestet.
 	Die optimale Stärke war deshalb wichtig, da das System nicht funktionieren würde, wenn diese falsch dimensioniert werden würde.
@@ -517,8 +521,8 @@ Der gesamte Rotorschutz konnte dann mittels den vorgesehenen Schrauben an der Ce
 
 	\subsection{Umsetzung}
 
-	In den folgenden Abbildungen wird einerseits die konstruierte Halterung Abbildung \ref{halterung_pixy_creo})
-	und andererseits die Gefertigte  mit der PIXY CMU cam5 (Abbildung \ref{halterung_pixy}).
+	In den folgenden Abbildungen wird einerseits die konstruierte Halterung (Abbildung \ref{halterung_pixy_creo})
+	und andererseits die Gefertigte  mit der PIXY CMU cam5 (Abbildung \ref{halterung_pixy}) gezeigt.
 
 			\begin{figure}[thb]
 				\begin{centering}
@@ -576,11 +580,11 @@ Der gesamte Rotorschutz konnte dann mittels den vorgesehenen Schrauben an der Ce
 
 	\subsection{Technische Planung}
 
-	Im Laufe des Projektes hat es sich bestätigt, dass es manchmal passieren kann, dass die Funkverbindung zwischen der Fernbedienung und dem Flugobjekt abbrechen kann.
-	Ist jedoch keine Sicherung in der Firmware des Copters vorgesehen, fliegt dieser unkontrollierbar und stürzt ab.
+	Im Laufe des Projektes hat es sich bestätigt, dass die Funkverbindung zwischen der Fernbedienung und dem Flugobjekt abbrechen kann.
+	Ist jedoch keine Sicherung in der Firmware des Copters vorgesehen, fliegt dieser unkontrollierbar und stürzt früher oder später ab.
 
 	In diesem Projekt ist das Problem aufgetreten während eines Testfluges zur Testung der Höhenbestimmung durch den Ultraschallsensor.
-	Damit dies nicht mehr vorkam, müsste eine Hardwaremäßige Vorrichtung entwickelt werden, die im Falle eines unvorhergesehenen Funkabbruches den Hexacopter sicher auf den Boden sinken lässt.
+	Damit dies nicht mehr vorkam, musste eine Hardwaremäßige Vorrichtung entwickelt werden, die im Falle eines unvorhergesehenen Funkabbruches den Hexacopter sicher auf den Boden sinken lässt.
 
 	\subsection{Umsetzung}
 
@@ -597,16 +601,16 @@ Der gesamte Rotorschutz konnte dann mittels den vorgesehenen Schrauben an der Ce
 
 	Prinzipiell werden zwei Gleitbuchsen gegenüberliegend am Hexacopter montiert, der Copter wird dann auf zwei langen Stangen aufgefädelt und kann sich dadurch nur mehr nach oben und unten bewegen.
 	Das soll verhindern, dass der Hexacopter nicht nach links, rechts, vorne oder hinten abdriften kann.
-	Beide Buchsen verwenden das spezielle Klammersystem um sie leicht und fest montieren zu können, wie auch die Halterungen für den Ultraschallsensor und die PIXY Cam, werden die Führungen auf die Platte geklippt.
-	Die Führungen wurden diesmal auf beide Centerplates befestigt, das bedeutet die obere Klammer musste an die Centerplate angepasst werden.
-	Die Centerplates haben komplett verschiedene Ausnehmungen vorgesehen, das erschwerte die Anpassung des Klammersystems um ein Vielfaches.
+	Auf beiden Buchsen wird das spezielle Klammersystem verwendet, um sie leicht und fest montieren zu können.
+	Die Führungen wurden diesmal auf beide Centerplates befestigt, das bedeutet die obere Spange musste an die Centerplate angepasst werden.
+	Die Centerplates haben komplett verschiedene Ausnehmungen vorgesehen, das erschwerte die Anpassung des Klippsystems um ein Vielfaches.
 	Um diese Herausforderung trotzdem lösen zu können, wurden die Platten in Creo ausgemessen und dann auf die Halterungen übertragen.
 
 	Gefertigt wurden beide Teile in dem 3D Drucker der Schule, da die Form der Gleitbuchsen händisch sehr aufwändig zu fertigen werden würden, \bzw es wird sehr viel Gewicht durch diese Fertigungsmethode eingespart.
 	Zu beachten war beim Konstruieren wiederum, dass der Drucker grobe Toleranzen hat und diese miteingerechnet werden mussten.
 
 	Die Bohrungen wurden so groß dimensioniert, dass der Hexacopter leicht auf und ab fliegen kann, ohne zu stark zu verkanten.
-	Die Phasen bei den Bohrungen oben und unten, lassen den Copter leichter auffädeln, da die Stangen leichter in die Bohrungen führen.
+	Die Phasen bei den Bohrungen oben und unten, lassen den Copter leichter auffädeln, da sich die Stangen leichter in die Bohrungen führen lassen.
 
 	\subsection{Herausforderungen und Lösungen}
 
@@ -622,25 +626,26 @@ Der gesamte Rotorschutz konnte dann mittels den vorgesehenen Schrauben an der Ce
 
 	\subsection{Abteilungsübergreifendes Arbeiten}
 
-	Die Erfahrung, dass man ein Projekt Klassen,- oder gar Abteilungsübergreifend umsetzt, ist für die Vorbereitung im Berufsleben sehr wichtig.
+	Die Erfahrung, dass man ein Projekt Klassen,- oder gar Abteilungsübergreifend umsetzt, ist für die Vorbereitung im Berufsleben ein großer Vorteil.
 	Es besteht ein großer Unterschied, ob man in einer Gruppe arbeitet, die man jeden Tag in der Klasse trifft, oder in einem Team, welches man nur zu Meetings oder kurzen Gesprächen sieht.
 	Dieses Problem haben wir nicht nur durch die Jour fixes, sondern auch mit den KaTeCos (alle drei Wochen) gelöst.
-	Die KaTeCos waren besonders wichtig, da nicht nur der Projektverlauf im Detail besprochen wurde, sondern auch die Teamfähigkeit gestärkt wurde.
+	Die KaTeCos waren besonders wichtig, da nicht nur der Projektverlauf im Detail besprochen, sondern auch die Teamfähigkeit gestärkt wurde.
 
 	\subsection{Arbeiten im allgemeinen}
 
-	Die Vorgangsweise zur Umsetzung eines Teiles war meist die gleiche, eine Idee, eine Konstruktion in Creo und die Fertigung im 3D Drucker.
+	Die Vorgangsweise zur Umsetzung eines Teiles war meist die gleiche: Eine Idee, eine Konstruktion in Creo und die Fertigung im 3D Drucker.
 	Im Laufe des Projektes hat sich herausgestellt, dass die Planung \bzw die Anhaltspunkte zur Konstruktion am wichtigsten waren.
-	Das hat sich beim Entwickeln des Rotorschutzes gezeigt, die Planung wurde vernachlässigt in Creo angefangen zu zeichnen.
+	Das hat sich beim Entwickeln des Rotorschutzes gezeigt, die Planung wurde vernachlässigt und in Creo blind angefangen zu zeichnen.
 	Die Folge war, dass dieses Ziel ins Stocken kam und immer mehr Zeit auf sich genommen hat.
-	Nachdem der Rotorschutz nahezu aussichtslos schien, begann ich mich mit den Halterungen für die Sensoren zu beschäftigen,
-	diese „Abwechslung“ hat dazu geführt, dass neue Ideen zur Optimierung des Propellerschutzes entstanden, welche dann auch zum Abschluss des Zieles führten.
+	Nachdem der Rotorschutz nahezu aussichtslos schien, begann ich mich mit den Halterungen für die Sensoren zu beschäftigen.
+	Nach dem Abschluss haben sich neue Ideen zur Optimierung des Propellerschutzes ergeben, welche dann auch zur entgültigen Fertigstellung führten.
 
 	\subsection{Arbeiten mit dem 3D Drucker}
 
-	Der 3D Drucker der Schule ist eine faszinierende Maschine, es kann fast jedes Teil präzise anfertigen, egal welche Form es hat.
+	Der 3D Drucker der Schule ist eine faszinierende Maschine, es kann fast jedes Teil präzise angefertigt werden, egal welche Form es hat.
 	Wir hatten das Glück diesen Drucker verwenden zu dürfen \bzw wurden sogar von EVO-tech mit Druckmaterial unterstützt.
-	Es war besonders bei den Halterungen sehr komfortabel, dass wir diese drucken konnten. Das Klammersystem könnte nur sehr mühsam gefertigt werden, es müsste sogar eine andere Lösung gefunden werden.
+	Es war besonders komfortabel die Halerungen drucken zu dürfen, da uns der Drucker eine Menge abgenommen hat. 
+	Das Klammersystem könnte nur sehr mühsam gefertigt werden, es müsste sogar eine andere Lösung gefunden werden.
 
 	Man muss sich an jede Maschine die man verwendet erst gewöhnen, man lernt wie man sie bedienen muss, ihre Probleme und Makeln.
 	Der Evolizer ist ein hoch entwickeltes Produkt, jedoch muss man auch hier die richtige Bedienung kennenlernen.
