--- a/diplom.bib
+++ b/diplom.bib
@@ -316,6 +316,34 @@
 	year = {2004}
 }
 
+%kathi
+@online{symfonyDokumentation,
+	lastchecked = {2016-02-11},
+	url = {http://symfony.com/doc/2.7/book/index.html},
+	title = {Symfony 2.7 - Dokumentation}
+}
+
+%kathi
+@online{twigDokumentation,
+	lastchecked = {2016-02-26},
+	url = {http://twig.sensiolabs.org/documentation},
+	title = {Twig - Dokumentation}
+}
+
+%kathi
+@online{doctrineDokumentation,
+	lastchecked = {2016-02-26},
+	url = {http://doctrine-orm.readthedocs.org/en/latest/tutorials/getting-started.html},
+	title = {Doctrine - Dokumentation}
+}
+
+%kathi
+@online{gulpTutorial,
+	lastchecked = {2016-02-26},
+	url = {https://liechtenecker.at/front-end-workflow-mit-gulp/},
+	title = {Gulp - Tutorial}
+}
+
 %chrisy
 @online{Vicon,
 	lastchecked = {2016-03-03},
